v3.7.16 (XXXX-XX-XX)
--------------------

* Add better error message for replication request failures in case requests
  are retried.

* Make background statistics gathering more efficient by avoiding one AQL query
  every 10 seconds that fetched the most recent stats entry. Instead, buffer 
  the entry in value after we have written it. Also spread out the statistics
  calls by different servers more randomly, so that request spikes are avoided
  for cluster with many coordinators that used to run their statistics queries
  at about the same time when the instances were started simultaneously.

* Fixed ES-881: Fixed LDAP global options. This needs to use the first active
  provider, not just the first provider and it should be globally disabled.

* Properly clean up replication client entries for tailing from WAL so that
  archived WAL files are not retained for an unnecessary long time period.

* Added metrics `rocksdb_wal_sequence_lower_bound`,
  `rocksdb_archived_wal_files`, `rocskdb_prunable_wal_files` and
  `rocksdb_wal_pruning_active` to allow inspection of WAL file pruning from the
  outside.

* Fixed issue BTS-536 "Upgrading without rest-server is aborted by error".
  Now stating `--server.rest-server false` does not require the additional
  `--console` argument for upgrading a server.

* Fixed counting of all read transaction as aborted. Added a new metric to count
  read transactions.

* Fix assertion failure in AQL query profiling for queries with more than a
  single shard per DB server and which join multiple collections.

* Fix windows installer PATH manipulation issue by replaceng the NSIS plugin
  (BTS-176).

* Fix race in RocksDB throttle listener, when it was getting started lazily
  during server shutdown.

* Fixed BTS-582: ArangoDB client EXE package for Windows has incorrect metadata.

* Fixed BTS-575: Windows EXE installer doesn't replace service during upgrade in
  silent (non-UI) mode.
